--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "John Turkson",
   "license": "ISC",
@@ -19,4 +19,6 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
   }
+  
 }
+
